Update memory_mgmt.md